--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,23 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+buildscript {
+    ext.android_support_ver = "27.1.1"
+    ext.moxy_ver = "1.5.5"
+    ext.butterknife = "8.8.1"
+    ext.glide = "4.8.0"
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation "com.android.support:appcompat-v7:$android_support_ver"
+    implementation "com.android.support:design:$android_support_ver"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -29,12 +40,22 @@ dependencies {
 
     ///////////////////////////////////////////////////////////////////////////
     // Moxy
-    implementation 'com.arello-mobile:moxy:1.5.5'
-    implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
-    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.5'
+    implementation "com.arello-mobile:moxy:$moxy_ver"
+    implementation "com.arello-mobile:moxy-app-compat:$moxy_ver"
+    annotationProcessor "com.arello-mobile:moxy-compiler:$moxy_ver"
 
     ///////////////////////////////////////////////////////////////////////////
     // RxJava
-    implementation "io.reactivex:rxjava:1.3.0"
-    implementation "io.reactivex:rxandroid:1.2.1"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+
+    ///////////////////////////////////////////////////////////////////////////
+    // Butterknife
+    implementation "com.jakewharton:butterknife:$butterknife"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife"
+
+    ///////////////////////////////////////////////////////////////////////////
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
 }
