--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 27
@@ -33,29 +34,41 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$android_support_ver"
     implementation "com.android.support:design:$android_support_ver"
+    implementation "com.android.support:recyclerview-v7:$android_support_ver"
+    implementation "com.android.support:cardview-v7:$android_support_ver"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     ///////////////////////////////////////////////////////////////////////////
-    // Moxy
-    implementation "com.arello-mobile:moxy:$moxy_ver"
-    implementation "com.arello-mobile:moxy-app-compat:$moxy_ver"
-    annotationProcessor "com.arello-mobile:moxy-compiler:$moxy_ver"
-
-    ///////////////////////////////////////////////////////////////////////////
     // RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.4.0"
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
 
     ///////////////////////////////////////////////////////////////////////////
-    // Butterknife
-    implementation "com.jakewharton:butterknife:$butterknife"
-    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife"
+    // Moxy
+    implementation 'com.arello-mobile:moxy:1.5.5'
+    implementation 'com.arello-mobile:moxy-app-compat:1.5.5'
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.5'
+
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     ///////////////////////////////////////////////////////////////////////////
-    // Glide
-    implementation "com.github.bumptech.glide:glide:$glide"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
+    // Dagger 2
+    implementation 'com.google.dagger:dagger:2.13'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+    implementation "com.github.bumptech.glide:glide:4.8.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
 }
