--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'realm-android'
 
 android {
@@ -25,6 +26,7 @@ android {
 }
 
 buildscript {
+
     ext.android_support_ver = "27.1.1"
     ext.moxy_ver = "1.5.5"
     ext.butterknife = "8.8.1"
@@ -71,5 +73,12 @@ dependencies {
 
     implementation "com.github.bumptech.glide:glide:4.8.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
+        transitive = true
+    }
+    implementation('com.crashlytics.sdk.android:answers:1.4.3@aar') {
+        transitive = true
+    }
 
 }
