--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,12 @@ buildscript {
         mavenCentral()
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "io.realm:realm-gradle-plugin:5.4.1"
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -18,6 +20,7 @@ allprojects {
         mavenCentral()
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
 
